k/deployment-definition.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
  labels:
    app: simpleapp-deployment

spec:
  replicas: 5
  selector:
    matchLabels:
      app: simpleapp-deployment

  template:
    metadata:
      labels:
        app: simpleapp-deployment

    spec:
      containers:
      - name: simpleapp-container-deployment
        image: 9538253250/simpleapp:4.0
        ports:
          - containerPort: 8000
        volumeMounts:
          - mountPath: "/opt/simpleapp"
            name: simpleapp-storage
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu : "500m"
      volumes:
        - name: simpleapp-storage
          persistentVolumeClaim:
            claimName: simpleapp-pv-claim 
        #command: ["sleep2.0"] #Entrypoint
        #args: ["10"] #cmd line arugument
