k/recreate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp-recreate
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      name: simpleapp-rec
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: simpleapp-rec
    spec:
      containers:
      - image: 9538253250/simpleapp:install
        name: simpleapp-recr
        ports:
        - containerPort: 8080
          protocol: TCP
