k/security_context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper
  namespace: default
spec:
  containers:
  - command:
    - sleep
    - "4800"
    image: ubuntu
    name: ubuntu-sleeper
    securityContext:
      runAsUser: 1010
      capabilities:
        add: ["SYS_TIME", "NET_ADMIN"]
