k/simpleapp.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: simpleapp
  name: simpleapp
spec:
  containers:
  - image: 9538253250/simpleapp:1.0
    name: simpleapp
    ports:
    - containerPort: 8000
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
