k/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djnago
spec:
  type: NodePort
  selector:
    app: simpleapp-deployment
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
