k/svc-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp
  labels:
    app: simpleapp-deployment
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: simpleapp-deployment
  type: NodePort

#kubectl get svc simpleapp -> to get NodePort
#http://minikubeip:nodeport
#minikube service simpleapp --url
